notes for navigation bar

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,3 +7,4 @@
 <%end%>
 <%= link_to "Edit Your Profile", edit_user_path %>
 <%= link_to "Add a New Student", new_student_path %>
+<p> profile students schedual courses materials logout </p>
