add redirect routes to update action

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,8 +4,8 @@
     <%= f.label :email %>
     <%= f.text_field :email %>
     <%= f.label :password %>
-    <%= f.password :password %>
+    <%= f.password_field :password %>
     <%= f.label :password_confirmation %>
-    <%= f.password_confirmation :password_confirmation %>
-    <%= f.submit "Create User" %>
+    <%= f.password_field :password_confirmation %>
+    <%= f.submit "Update User" %>
     <%end%>
