--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,9 +3,9 @@
     <%= f.text_field :name %>
     <%= f.label :email %>
     <%= f.text_field :email %>
+    <%= f.label :email_confirmation %>
+    <%= f.text_field :email_confirmation%>
     <%= f.label :password %>
-    <%= f.password_field :password %>
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
+    <%= f.password_field :password%>
     <%= f.submit "Update User" %>
     <%end%>
