--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -3,5 +3,5 @@
     <%= f.text_field :name %>
     <%= f.label :goal %>
     <%= f.text_field :goal %>
-    <%= f.submit "Create Student"
+    <%= f.submit "Create Student" %>
 <% end%>
