--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,7 +1,7 @@
-<%= form_for @student do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.label :goal %>
-    <%= f.text_field :goal %>
-    <%= f.submit "Create Student" %>
+<%= form_tag new_user_student_path do %>
+    <%= label_tag('user[student][name]', "Name:")  %>
+    <%= text_field_tag('user[student][name]') %>
+    <%= label_tag('user[student][goal]', "Goal:") %>
+    <%= text_field_tag('user[student][goal]') %>
+    <%= submit_tag "Create Student" %>
 <% end%>
