--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag new_user_student_path do %>
+<%= form_tag user_students_path do %>
     <%= label_tag('user[student][name]', "Name:")  %>
     <%= text_field_tag('user[student][name]') %>
     <%= label_tag('user[student][goal]', "Goal:") %>
