--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,7 +1,8 @@
+<h2>Your Students</h2>
 <% @students.each do |student|%>
-    <%= student.name %> <%= link_to student.name, user_student_path(student) %>
+    <p>Name:<%= student.name %> Go to <%= link_to student.name, user_student_path(student) %></p>
     <% student.courses.each do |course| %>
-        <%= course.title %> <%= link_to course.name, course_path(student) %>
-        <%= course.enrollments.where(student_id: course.student_id.student_progress %>
+        <p><%= course.title %> <%= link_to course.name, course_path(student) %></p>
+        
     <%end%>
 <%end%>
