--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,9 +2,9 @@
     <%= f.label :name %>
     <%= f.text_field :name %>
     <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.email_field :email %>
     <%= f.label :email_confirmation %>
-    <%= f.text_field :email_confirmation %>
+    <%= f.email_field :email_confirmation %>
     <%= f.label :password %>
     <%= f.password_field :password %>
     <%= f.label :password_confirmation %>
