--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Your Students</h2>
 <% @students.each do |student|%>
-    <p>Name:<%= student.name %> Go to <%= link_to student.name, user_student_path(student) %></p>
+    <p>Name:<%= student.name %> Go to <%= link_to student.name, user_student_path(student.user_id, student) %></p>
     <% student.courses.each do |course| %>
         <p><%= course.title %> <%= link_to course.name, course_path(student) %></p>
         
