change sessions new form to post to login

--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -5,6 +5,9 @@
     <%= f.text_field :description %>
     <%= f.collection_select :material_id, Material.all, :id, :item %>
     <br>
+   <p> Choose materials:</p>
+    <%= f.collection_check_boxes(:material_id, Material.all, :id, :item) %>
+    
 
     <p> Add materials </p>
     <%= f.fields_for :materials do |mat| %>
