--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -27,7 +27,7 @@
 
     <p> Set up course meetings </p>
     <%= f.fields_for :meetings do |meet| %>
-        <%= meet.collection_select( :day [['Monday',1]['Tuesday', 2]['Wednesday', 3]['Thursday', 4]['Friday', 5]['Saturday', 6]['Sunday', 7]], :day, :day) %>
+        <%= meet.collection_select( :day_id, [['Monday',1]['Tuesday', 2]['Wednesday', 3]['Thursday', 4]['Friday', 5]['Saturday', 6]['Sunday', 7]], :id, :name) %>
         
         <%= meet.label :start_time %>
         <%= meet.text_field :start_time %>
