--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,15 +1,20 @@
+<h1>Create a Course</h1>
 <%= form_for @course do |f| %>
     <%= f.label :title %>
+    <br>
     <%= f.text_field :title %>
+    <br>
     <%= f.label :description %>
+    <br>
     <%= f.text_field :description %>
     
     <br>
    <p> Choose materials:</p>
     <%= f.collection_check_boxes(:material_id, Material.all, :id, :item) %>
    <p> user - students-meetings-courses-course_materials- materials</p>
-
+    <br>
     <p> Add materials </p>
+    <br>
     <%= f.fields_for :materials do |mat| %>
         <%= mat.label :item %>
         <%= mat.text_field :item %>
@@ -27,7 +32,7 @@
 
     <p> Set up course meetings </p>
     <%= f.fields_for :meetings do |meet| %>
-        <%= meet.collection_select( :day_id, [['Monday',1]['Tuesday', 2]['Wednesday', 3]['Thursday', 4]['Friday', 5]['Saturday', 6]['Sunday', 7]], :id, :name) %>
+        <%= meet.collection_select( :day_id, Day.all, :id, :name) %>
         
         <%= meet.label :start_time %>
         <%= meet.text_field :start_time %>
