--- a/app/views/days/new.html.erb
+++ b/app/views/days/new.html.erb
@@ -1,2 +1,11 @@
 <%= form_for @day do |f| %>
-    <%
+    <%= f.select :name.options_for_select(["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"]), include_blank: true %>
+    <%= f.fields_for :meetings do |meet|%>
+        <%= meet.label :start_time %>
+        <%= meet.text_field :start_time %>
+        <%= meet.label :end_time %>
+        <%= meet.text_field :end_time %>
+    <%end%>
+    <%= f.submit "Create Meetings" %>
+<%end%>
+
