--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -41,7 +41,7 @@
 
     <p> Set The Schedual </p>
     <%= f.fields_for :meetings do |meet| %>
-        <%= meet.collection_select  :day_id, Day.all, :id, :name, prompt: true %>["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]) %>
+        <%= meet.collection_select  :day_id, Day.all, :id, :name, prompt: true %>
         
         <%= meet.label :start_time %>
     
@@ -53,4 +53,4 @@
         <br>
     <%end%>
 
-    <%= f.submit "Create Course" %>
+    <%= f.submit "Edit Course" %>
