add days of week

--- a/app/views/meetings/index.gtml.erb
+++ b/app/views/meetings/index.gtml.erb
@@ -3,3 +3,9 @@
 <%= @monday_meetings.each do |meet| %>
     <p>Start Time:<%= meet.start_time %> End Time: <%= meet.end_time %></p>
 <%end%>
+<h3>Tuesday</h3>
+<h3>Wednesday</h3>
+<h3>Thursday</h3>
+<h3>Friday</h3>
+<h3>Saturday</h3>
+<h3>Sunday</h3>
