--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -15,5 +15,5 @@
 
 
 <%= link_to "Edit Course And Set Schedule", edit_course_path(@course) %>
-<%= link_to "Add One More Meeting", new_course_meeting(@course) %>
-<%= link_to "Course Schedule", course_meetings(@course) %>
+<%= link_to "Add One More Meeting", new_course_meeting_path(@course) %>
+<%= link_to "Course Schedule", course_meetings_path(@course) %>
