--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,11 +1,11 @@
-<%= form_for @day do |f| %>
-    <%= f.select (:name ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"]) %>
-    <%= f.fields_for :meetings do |meet|%>
-        <%= meet.label :start_time %>
-        <%= meet.text_field :start_time %>
-        <%= meet.label :end_time %>
-        <%= meet.text_field :end_time %>
-    <%end%>
-    <%= f.submit "Create Meetings" %>
+<%= form_for @meeting do |f| %>
+    <%= f.collection_select :day_id, Day.all, :id, :name %>
+    
+    <%= f.label :start_time %>
+    <%= f.text_field :start_time %>
+    <%= f.label :end_time %>
+    <%= f.text_field :end_time %>
+    
+    <%= f.submit "Create Meeting" %>
 <%end%>
 
