corrections and trying to create an edit course form with nested_attributes

--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit a Course</h1>
-<%= form_for :course do |f| %>
+<%= form_for @course do |f| %>
     <%= f.label :title %>
     <br>
     <%= f.text_field :title %>
