--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @meeting do |f| %>
+<%= form_for [@course, @meeting] do |f| %>
     <%= f.collection_select :day_id, Day.all, :id, :name %>
     
     <%= f.label :start_time %>
