create materials route and index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,15 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= link_to "Log Out", logout_path %>
+    <% if logged_in? %>
+      <%= link_to "Profile", user_path(current_user) %>
+      <%= link_to "Students", students_path %>
+      <%= link_to "Schedual", meetings_path %>
+      <%= link_to "All Materials", materials_path %>
+      <%= link_to "Log Out", logout_path %>
+      
+
+    <%end%>
   </head>
 
   <body>
