--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <% if logged_in? %>
       <%= link_to "Profile", user_path(current_user) %>
       <%= link_to "Students", students_path %>
+      <%= link_to "Courses", courses_path %>
+      <%= link_to "Create A Course", new_course_path %>
       <%= link_to "Schedual", meetings_path %>
       <%= link_to "All Materials", materials_path %>
       <%= link_to "Log Out", logout_path %>
