--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -10,10 +10,12 @@
     
     <br>
    <p> What materials will you need?:</p>
-    <%= f.collection_check_boxes(:material_id, Material.all, :id, :item) %>
+   <%= f.fields_for :course_materials do |ct| %>
+        <%= ct.collection_check_boxes(:material_id, Material.all, :id, :item) %>
+    <%end%> 
    
     <br>
-    <p> Add materials: </p>
+    <p> Create new materials: </p>
     <br>
     <%= f.fields_for :materials do |mat| %>
         <%= mat.label :item  %>
