--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,7 +1,11 @@
-<h2><%= @course.title %></h2>
+<% if params[:course_id] %>
+    <h2><%= @course.title %></h2>
+<%end%>    
 <h3>Monday</h3>
-<%= @monday_meetings.each do |meet| %>
-    <p>Start Time:<%= meet.start_time %> End Time: <%= meet.end_time %></p>
+<% if !@monday_meetings.empty? %>
+    <%= @monday_meetings.each do |meet| %>
+        <p>Start Time:<%= meet.start_time %> End Time: <%= meet.end_time %></p>
+    <%end%>
 <%end%>
 <h3>Tuesday</h3>
 <h3>Wednesday</h3>
