--- a/app/views/materials/index.html.erb
+++ b/app/views/materials/index.html.erb
@@ -1,4 +1,6 @@
 <h2>Your Required Materials: </h2>
+<ul>
 <% @materials.each do |mat| %>
-    <%= mat.item %>
+    <li><%= mat.item %></li>
 <%end%>
+</ul>
