--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Create a Course</h1>
+<%= render partial: 'layouts/errors', locals: {object:@course} %>
 <%= form_for @course do |f| %>
     <%= f.label :title %>
     <br>
