--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: 'layouts/errors', locals: {object:@student} %>
 <%= form_tag students_path do %>
     <%= label_tag('student[name]', "Name:")  %>
     <%= text_field_tag('student[name]') %>
