--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: 'layouts/errors', locals: {object:@user} %>
 <%= form_for @user do |f|%>
     <%= f.label :name %>
     <%= f.text_field :name %>
