--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,4 +1,6 @@
 
+<br>
+<h2>Add A Meeting For <%=@course.title%></h2>
 <%= form_for [@course, @meeting] do |f| %>
     <%= f.collection_select :day_id, Day.all, :id, :name %>
     
@@ -6,6 +8,8 @@
     <%= f.text_field :start_time %>
     <%= f.label :end_time %>
     <%= f.text_field :end_time %>
+    
+    <%= f.hidden_field :student_id, value: @course.enrollments.first.student_id %>
     
     <%= f.submit "Create Meeting" %>
 <%end%>
