--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -9,7 +9,7 @@
     <%= f.label :end_time %>
     <%= f.text_field :end_time %>
     
-    <%= f.hidden_field :student_id, value: @course.enrollments.first.student_id %>
+    <%= f.hidden_field :user_id, value: current_user.id %>
     
     <%= f.submit "Create Meeting" %>
 <%end%>
