--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -30,7 +30,7 @@
         
         <%= enroll.label :end_date %>
         
-        <%= enroll.text_field :start_date %>
+        <%= enroll.text_field :end_date %>
         
         <br>
 
