--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -3,22 +3,34 @@
 <%end%>
 
 <h3>Monday</h3>
-<%= render partial: 'meeting', locals: {object: @monday_mornings} %>
+
+<% if !@monday_meetings.empty? %>
+    <% monday_meetings.each do |day| %>
+        
+        <% day.meetings.each do |meet| %>
+            <p>Start Time:<%= meet.start_time.strftime( "%l %M %p")%>  End Time: <%= meet.end_time.strftime( "%l %M %p") %></p>
+            <%= button_to "delete", meeting_path(meet.id), :method => "delete", data: { confirm: 'Are you sure?' } %> 
+
+            <br/>
+        <%end%>
+    <%end%>
+<%end%>
+
 
 <h3>Tuesday</h3>
-<%= render partial: 'meeting', locals: {object: @tuesday_mornings} %>
+<%= render(:partial => 'meetings', :locals => {:object => @tuesday_meetings}) %>
 
 <h3>Wednesday</h3>
-<%= render partial: 'meeting', locals: {object: @wednesday_mornings} %>
+<%= render(:partial => 'meetings', :locals => {:object => @wednesday_meetings}) %>
 
 <h3>Thursday</h3>
-<%= render partial: 'meeting', locals: {object: @thursday_mornings} %>
+<%= render (:partial => 'meetings', :locals => {:object => @thursday_meetings}) %>
 
 <h3>Friday</h3>
-<%= render partial: 'meeting', locals: {object: @friday_mornings} %>
+<%= render (:partial => 'meetings', :locals => {:object => @friday_meetings}) %>
 
 <h3>Saturday</h3>
-<%= render partial: 'meeting', locals: {object: @saturday_mornings} %>
+<%= render (:partial => 'meetings', :locals => {:object => @saturday_meetings}) %>
 
 <h3>Sunday</h3>
-<%= render partial: 'meeting', locals: {object: @sunday_mornings} %>
+<%= render (:partial => 'meetings', :locals => {:object => @sunday_meetings} %>
