add destro and show actions, and logic in index, and nested materials route

--- a/app/views/materials/index.html.erb
+++ b/app/views/materials/index.html.erb
@@ -1,3 +1,6 @@
+<% if @course %>
+    <h2><%= @course.title %></h2>
+<%end%>
 <h2>Your Required Materials: </h2>
 <ul>
 <% @materials.each do |mat| %>
