--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,7 +1,7 @@
 
 <% @courses.each do |course| %>
-   <p> <%= course.title %> <%= link_to "go to #{course.title}", course_path(course) %></p>
-   <p>Students Enrolled:</p>
+   <h3> <%= course.title %></h3> <p><%= link_to "go to #{course.title}", course_path(course) %></p>
+   <h4>Students Enrolled:</h4>
    
    <% if course.students %>
         <% course.students.each do |student| %>
