--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -14,8 +14,8 @@
     
     <%= enroll.student.name %>
     <br>
-    <p>Start Date:  <%= enroll.start_date %></p>
-    <p>End Date:  <%= enroll.end_date %></p>
+    <p>Start Date:  <%= enroll.start_date.strftime("%b %d, %Y") %></p>
+    <p>End Date:  <%= enroll.end_date.strftime("%b %d, %Y") %></p>
 <%end%>
 <br>
 
