--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -12,15 +12,20 @@
 
 <h3>Student Enrollments:</h3>
 
-<% @course.enrollments.each do |enroll|%>
+<% if @course.enrollments %>
+    <% @course.enrollments.each do |enroll|%>
     
-    <%= enroll.student.name %>
-    <br>
-    <p>Start Date:  <%= enroll.start_date.strftime("%b %d, %Y") %></p>
-    <p>End Date:  <%= enroll.end_date.strftime("%b %d, %Y") %></p>
-<%end%>
+        <%= enroll.student.name %>
+        <br>
+        <p>Start Date:  <%= enroll.start_date.strftime("%b %d, %Y") %></p>
+        <% if enroll.end_date %>
+            <p>End Date:  <%= enroll.end_date.strftime("%b %d, %Y") %></p>
+        <%end%>
+    <%end%>
+<%end%>    
 <br>
 
+<%= button_to "delete course", course_path(@course.id), :method => "delete", data: {confirm: "Are you sure?"} %>
 
 <%= link_to "Edit Course And Set Schedule", edit_course_path(@course) %>
 <br>
