--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,8 +1,10 @@
 <h2>Your Students</h2>
 <% @students.each do |student|%>
-    <p>Name:<%= student.name %> Go to <%= link_to student.name, user_student_path(student.user_id, student) %></p>
+    <p>Name:<%= student.name %> Go to <%= link_to student.name, student_path(student) %></p>
     <% student.courses.each do |course| %>
-        <p><%= course.title %> <%= link_to course.name, course_path(student) %></p>
+        <p><%= course.title %> <%= link_to course.title, course_path(course.id) %></p>
         
     <%end%>
 <%end%>
+<br><br>
+<%= link_to "Create A Student Profile", new_student_path %>
