Adding edit pages to user and student

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -3,6 +3,6 @@
     <%= label_tag('student[name]', "Name:")  %>
     <%= text_field_tag('student[name]') %>
     <%= label_tag('student[goal]', "Goal:") %>
-    <%= text_field_tag('student[goal]') %>
+    <%= text_area_tag('student[goal]') %>
     <%= submit_tag "Create Student" %>
 <% end%>
