--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -12,9 +12,10 @@
     <br>
    <p> What materials will you need?:</p>
 
-   <%= f.collection_check_boxes(:material_id, Material.all, :id, :item) %>
+   
 
    <%= f.fields_for :course_materials do |cm| %>
+        <%= cm.collection_check_boxes(:material_id, Material.all, :id, :item) %>
         <br>
         <p> Create new materials: </p>
         <br>
@@ -43,6 +44,22 @@
         <br>
 
     <%end%>
+
+    <p> Set The Schedual </p>
+    <%= f.fields_for :meetings do |meet| %>
+        <%= meet.collection_select  :day_id, Day.all, :id, :name, prompt: true, include_blank: true %>
+        
+        <%= meet.label :start_time %>
+    
+        <%= meet.text_field :start_time %>
+        
+        <%= meet.label :end_time %>
+        <%= meet.text_field :end_time %>
+        <%= meet.hidden_field :user_id, value: current_user.id %>
+        <br>
+        <br>
+    <%end%>
+
 
     <%= f.submit "Create Course" %>
  <%end%>
