--- a/app/views/meetings/_meetings.html.erb
+++ b/app/views/meetings/_meetings.html.erb
@@ -1,14 +1,14 @@
 
 <% if !object.empty? %>
-    <% object.each do |day| %>
+    <% object.uniq.first.meetings.each do |meet| %>
         
-        <% day.meetings.each do |meet| %>
+        
             
-            <P><%= meet.course.title %></p>
-            <p>Start Time:<%= meet.start_time.strftime( "%l %M %p")%>  End Time: <%= meet.end_time.strftime( "%l %M %p") %></p>
-            <%= button_to "delete", meeting_path(meet.id), :method => "delete", data: { confirm: 'Are you sure?' } %> 
+        <P><%= meet.course.title %></p>
+        <p>Start Time:<%= meet.start_time.strftime( "%l %M %p")%>  End Time: <%= meet.end_time.strftime( "%l %M %p") %></p>
+        <%= button_to "delete", meeting_path(meet.id), :method => "delete", data: { confirm: 'Are you sure?' } %> 
 
-            <br/>
-        <%end%>
+        <br/>
+        
     <%end%>
 <%end%>
