--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -5,15 +5,12 @@
 <h3>Monday</h3>
 
 <% if !@monday_meetings.empty? %>
-    <% @monday_meetings.each do |day| %>
+    <% @monday_meetings.uniq.first.meetings.each do |meet| %>
+        <%= meet.course.title %>
         
-        <% day.meetings.each do |meet| %>
-            <%= meet.course.title %>
-            <p>Start Time:<%= meet.start_time.strftime( "%l %M %p")%>  End Time: <%= meet.end_time.strftime( "%l %M %p") %></p>
-            <%= button_to "delete", meeting_path(meet.id), :method => "delete", data: { confirm: 'Are you sure?' } %> 
-
-            <br/>
-        <%end%>
+        <p>Start Time:<%= meet.start_time.strftime( "%l %M %p")%>  End Time: <%= meet.end_time.strftime( "%l %M %p") %></p>
+        <%= button_to "delete", meeting_path(meet.id), :method => "delete", data: { confirm: 'Are you sure?' } %>
+        <br>
     <%end%>
 <%end%>
 
