--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -27,7 +27,7 @@
 
 <%= button_to "delete course", course_path(@course.id), :method => "delete", data: {confirm: "Are you sure?"} %>
 
-<%= link_to "Edit Course And Set Schedule", edit_course_path(@course) %>
+<%= link_to "Edit Course", edit_course_path(@course) %>
 <br>
 <%= link_to "Add One More Meeting", new_course_meeting_path(@course) %>
 <br>
